--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   </div>
 
                   <form id="de-calc-form" class="col-xs-12" role="form" name="gasdata">
-                    <h4><strong>State:</strong></h4>
+                    <h4><strong>I-95 Corridor Coalition State:</strong></h4>
                     <label class="control-label form-control-label">Which state do you reside in?</label>
                     <div class="form-group col-xs-12 state-field">
                       <div class="row">
